manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rcv-deployment
  labels:
    name: rcv
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rcv
  template:
    metadata:
      labels:
        name: rcv
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: rcv
        image: ghcr.io/kainlite/rcv:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        imagePullPolicy: Always
