manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcv
spec:
  selector:
    name: rcv
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
