manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rcv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "rcv.techsquad.rocks"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rcv
            port:
              number: 8080
